# taurius-installer

./: .gitignore  pyproject.toml
.fleet/: run.json
examples/password_manager/: main.py
examples/password_manager/src/: __init__.py  settings.py
examples/password_manager/src/routes/: home.py  password.py
examples/password_manager/src/routes/base/: __init__.py
examples/password_manager/src/static/css/bootstrap-icons/: icons.min.css
examples/password_manager/src/static/js/tailwind/: tailwindcss.min.js
examples/password_manager/src/templates/: base.html
examples/password_manager/src/templates/fragments/modal/: add-password.html
examples/password_manager/src/templates/home/: index.html
examples/password_manager/src/types/: __init__.py
examples/password_manager/src/utils/: networks.py
tasks/: open_cov.py
taurius_installer/: __init__.py  installer.py  orchestrator.py
taurius_installer/downloader/: downloader.py
taurius_installer/exceptions/: __init__.py
taurius_installer/fetcher/: fetcher.py
taurius_installer/installer/: installer.py
taurius_installer/orchestrator/: orchestrator.py
taurius_installer/protocols/: provider.py
taurius_installer/types/: __init__.py
taurius_installer/ui/: __init__.py
taurius_installer/ui/conf/: constants.py
tests/downloader/: test_download_file.py
tests/fetcher/: test_fetch_application_info_from_cloud.py
tests/generics/: __init__.py
tests/installer/: test_install_executable.py
tests/orchestrator/: test_config_appdata_folder.py
