[tool.poetry]
name = "taurius-installer"
version = "0.1.0"
description = ""
authors = ["Pedro Augusto Barbosa Aparecido <pedr.augustobarbosa.aparecido@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12,<3.13"
appdata = "^2.2.1"
requests = "^2.31.0"
cefpython3 = "^66.1"
pythonnet = "^3.0.3"
pywebview = "^5.1"
flask = "^3.0.3"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
